# fgc

./: Cargo.toml  LICENSE-MIT  README.md  fgc_기획서.md
.github/workflows/: release.yml
src/: cli.rs  error.rs  main.rs
src/benchmark/: mod.rs
src/config/: mod.rs
src/git/: executor.rs  mod.rs  progress.rs
src/github/: mod.rs
src/lfs/: aria2c.rs  batch.rs  mod.rs
src/progress/: mod.rs  parser.rs  state.rs
src/resume/: mod.rs
src/strategy/: analyzer.rs  mod.rs
src/tui/: mod.rs
