[package]
name = "fgc"
version = "0.1.0"
edition = "2021"
description = "Fast Git Cloner - optimized cloning for large repositories"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Nergis0318/fgc"
homepage = "https://github.com/Nergis0318/fgc"
documentation = "https://github.com/Nergis0318/fgc#readme"
keywords = ["git", "clone", "cli", "lfs", "git-clone"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "fgc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
indicatif = "0.17"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
url = "2"

[dev-dependencies]
tempfile = "3"